# http-dragonfly

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  cliff.toml  config.yaml  deny.toml
.cargo/: mutants.toml
.github/workflows/: audit.yaml  ci.yaml  codecov.yaml  publish-image.yaml  publish-release.yaml
src/: cli.rs  config.rs  context.rs  errors.rs  handler.rs  health_check.rs  lib.rs  listener.rs  main.rs  signal.rs
src/config/: headers.rs  listener.rs  response.rs  splitter.rs  strategy.rs  target.rs
src/config/snapshots/: http_dragonfly__config__headers__tests__deserialize_ok_header_transform-2.snap  http_dragonfly__config__headers__tests__deserialize_ok_header_transform-3.snap  http_dragonfly__config__headers__tests__deserialize_ok_header_transform.snap  http_dragonfly__config__headers__tests__transforms-2.snap  http_dragonfly__config__headers__tests__transforms-3.snap  http_dragonfly__config__headers__tests__transforms-4.snap  http_dragonfly__config__headers__tests__transforms.snap  http_dragonfly__config__listener__tests__http_method.snap  http_dragonfly__config__listener__tests__listen_on-2.snap  http_dragonfly__config__listener__tests__listen_on-3.snap  http_dragonfly__config__listener__tests__listen_on-4.snap  http_dragonfly__config__listener__tests__listen_on-5.snap  http_dragonfly__config__listener__tests__listen_on.snap  http_dragonfly__config__listener__tests__wrong_http_method.snap
src/snapshots/: http_dragonfly__cli__tests__parse_asterisk_env_mask-2.snap  http_dragonfly__cli__tests__parse_asterisk_env_mask.snap  http_dragonfly__cli__tests__parse_correct_env_mask-2.snap  http_dragonfly__cli__tests__parse_correct_env_mask-3.snap  http_dragonfly__cli__tests__parse_correct_env_mask-4.snap  http_dragonfly__cli__tests__parse_correct_env_mask.snap  http_dragonfly__cli__tests__parse_empty_env_mask-2.snap  http_dragonfly__cli__tests__parse_empty_env_mask.snap  http_dragonfly__cli__tests__parse_incorrect_env_mask-2.snap  http_dragonfly__cli__tests__parse_incorrect_env_mask-3.snap  http_dragonfly__cli__tests__parse_incorrect_env_mask-4.snap  http_dragonfly__cli__tests__parse_incorrect_env_mask.snap  http_dragonfly__config__test__errors-2.snap  http_dragonfly__config__test__errors.snap  http_dragonfly__config__test__good_config.snap  http_dragonfly__config__test__good_config@01-minimal.yaml.snap  http_dragonfly__config__test__good_config@02-config.yaml.snap  http_dragonfly__config__test__good_config@02-config.yaml.snap.new  http_dragonfly__config__test__good_config@02-simple-config.yaml.snap  http_dragonfly__config__test__good_config@10-strategy-always_override.yaml.snap  http_dragonfly__config__test__good_config@20-strategy-always_target_id.yaml.snap  http_dragonfly__config__test__good_config@30-strategy-ok_then_failed.yaml.snap  http_dragonfly__config__test__good_config@40-strategy-ok_then_target_id.yaml.snap  http_dragonfly__config__test__good_config@50-strategy-ok_then_override.yaml.snap  http_dragonfly__config__test__good_config@60-strategy-failed_then_ok.yaml.snap  http_dragonfly__config__test__good_config@70-strategy-failed_then_target_id.yaml.snap  http_dragonfly__config__test__good_config@80-strategy-failed_then_override.yaml.snap  http_dragonfly__config__test__good_config@90-strategy-conditional_routing.yaml.snap  http_dragonfly__config__test__good_config@99-minimal.yaml.snap.new  http_dragonfly__config__test__wrong_config.snap  http_dragonfly__config__test__wrong_config@01-without-targets.yaml.snap  http_dragonfly__config__test__wrong_config@02-not-unique-target-ids.yaml.snap  http_dragonfly__config__test__wrong_config@03-not-unique-target-ids.yaml.snap  http_dragonfly__config__test__wrong_config@04-wrong-method.yaml.snap  http_dragonfly__config__test__wrong_config@05-wrong-error-override-config.yaml.snap  http_dragonfly__config__test__wrong_config@06-wrong-error-override-config.yaml.snap  http_dragonfly__config__test__wrong_config@07-wrong-error-override-config.yaml.snap  http_dragonfly__config__test__wrong_config@08-without-listeners.yaml.snap  http_dragonfly__config__test__wrong_config@20-strategy-always_target_id.yaml.snap  http_dragonfly__config__test__wrong_config@21-wrong-target_id.yaml.snap  (+13 more)
tests/: basic.rs  basic_config.rs  tls.rs
tests/common/: echo_server.rs  mod.rs
tests/configs/good/: 02-config.yaml  02-simple-config.yaml  10-strategy-always_override.yaml  20-strategy-always_target_id.yaml  30-strategy-ok_then_failed.yaml  40-strategy-ok_then_target_id.yaml  50-strategy-ok_then_override.yaml  60-strategy-failed_then_ok.yaml  70-strategy-failed_then_target_id.yaml  80-strategy-failed_then_override.yaml  90-strategy-conditional_routing.yaml
tests/configs/integration/: basic.yaml  tls.yaml
tests/configs/wrong/: 01-minimal.yaml  02-not-unique-target-ids.yaml  03-not-unique-target-ids.yaml  04-wrong-method.yaml  05-wrong-error-override-config.yaml  06-wrong-error-override-config.yaml  07-wrong-error-override-config.yaml  08-without-listeners.yaml  20-strategy-always_target_id.yaml  21-wrong-target_id.yaml  40-strategy-ok_then_target_id.yaml  70-strategy-failed_then_target_id.yaml  90-no-conditions.yaml  91-double-default.yaml  92-no-all-conditions.yaml  93-wrong-condition.yaml
tests/snapshots/: basic_config__basic_functionality-2.snap  basic_config__basic_functionality-3.snap  basic_config__basic_functionality-4.snap  basic_config__basic_functionality-4.snap.new  basic_config__basic_functionality-6.snap  basic_config__basic_functionality-8.snap  basic_config__basic_functionality-9.snap  basic_config__basic_functionality.snap
