[package]
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "HTTP requests splitter/router/relay"
edition = "2021"
keywords = ["http", "splitter", "relay", "router"]
license = "MIT OR Apache-2.0"
name = "http-dragonfly"
repository = "https://github.com/alex-karpenko/http-dragonfly"
version = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.8.1", features = ["http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "http1",
    "ring",
    "rustls-native-certs",
    "tls12",
    "webpki-roots",
] }
hyper-util = { version = "0.1.19", features = ["server", "client", "client-legacy", "http1", "server-auto"] }
jaq-interpret = "1.5.0"
jaq-parse = "1.0.3"
regex = "1.12.2"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
shellexpand = { version = "3.1.1", default-features = false, features = ["base-0"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "signal", "tracing", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
insta = { version = "1.45.0", features = ["glob", "ron", "redactions", "filters"] }
reqwest = "0.12.28"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }

[build-dependencies]
anyhow = "1.0.97"
