[package]
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "HTTP requests splitter/router/relay"
edition = "2021"
keywords = ["http", "splitter", "relay", "router"]
license = "MIT OR Apache-2.0"
name = "http-dragonfly"
repository = "https://github.com/alex-karpenko/http-dragonfly"
version = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.8.1", features = ["http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
    "http1",
    "aws-lc-rs",
    "rustls-native-certs",
    "tls12",
    "webpki-roots",
] }
hyper-util = { version = "0.1.20", features = ["server", "client", "client-legacy", "http1", "server-auto"] }
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
regex = "1.12.3"
rustls = { version = "0.23.36", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shellexpand = { version = "3.1.1", default-features = false, features = ["base-0"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "signal", "tracing", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["glob", "ron", "redactions", "filters"] }
reqwest = "0.13.2"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "tls12"] }

[build-dependencies]
anyhow = "1.0.101"
