[package]
authors = ["Oleksii Karpenko <alexkarpenko@yahoo.com>"]
description = "HTTP requests splitter/router/relay"
edition = "2021"
keywords = ["http", "splitter", "relay", "router"]
license = "MIT OR Apache-2.0"
name = "http-dragonfly"
repository = "https://github.com/alex-karpenko/http-dragonfly"
version = "0.4.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.9.0", features = ["http1"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = [
    "http1",
    "aws-lc-rs",
    "rustls-native-certs",
    "tls12",
    "webpki-roots",
] }
hyper-util = { version = "0.1.20", features = ["server", "client", "client-legacy", "http1", "server-auto"] }
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
regex = "1.12.3"
rustls = { version = "0.23.39", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
shellexpand = { version = "3.1.2", default-features = false, features = ["base-0"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "signal", "tracing", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["glob", "ron", "redactions", "filters"] }
reqwest = "0.13.2"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "tls12"] }

[build-dependencies]
anyhow = "1.0.102"
